@@ -1,3 +1,11 @@
+2009-12-21  Vladimir Prus  <vladimir@codesourcery.com>
+
+	PR gdb/10884
+
+	* gdb.mi/var-cmd.c (do_bitfield_tests): New
+	(main): Call do_bitfield_tests.
+	* gdb.mi/mi-var-cmd.exp: Run the 'bitfield' testcase.
+
 2009-12-21  Jan Kratochvil  <jan.kratochvil@redhat.com>
 
 	* gdb.base/foll-fork.exp (unpatch child, breakpoint at exit call):
